# dull

./: .dull-state  .gitignore  Cargo.toml  README.md  config.toml  fedora.toml  global.toml
example/: .gitignore  desktop.toml  global.toml  laptop.toml
example/modules/alacritty/: alacritty.yml
example/modules/fish/: config.fish
example/modules/helix/: config.toml
example/modules/helix/themes/: custom.toml
example/modules/kde/.config/: Trolltech.conf  filetypesrc  gtkrc  gtkrc-2.0  kactivitymanagerd-statsrc  kactivitymanagerd-switcher  kactivitymanagerdrc  kcminputrc  kconf_updaterc  kdeglobals  kfontinstuirc  kglobalshortcutsrc  khotkeysrc  konsolerc  ksmserverrc  ktimezonedrc  kwinrc  mimeapps.list  plasma-localerc  plasmashellrc
example/modules/kde/.config/gtk-3.0/: settings.ini
example/modules/kde/.config/gtk-4.0/: settings.ini
example/modules/wofi/: config  style.css
src/: config_parser.rs  globals.rs  main.rs  module_parser.rs  transaction.rs  traversal.rs  utils.rs  virtual_system.rs
src/transaction/: primitives.rs  tx_apply.rs  tx_builder.rs  tx_gen.rs  tx_processor.rs  tx_result.rs
