[package]
name = "dull-dotfile-manager"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/utkn/dull"
homepage = "https://github.com/utkn/dull"
description = "A dull dotfile manager"
license = "Unlicense"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
expanduser = "1.2.2"
gethostname = "0.4.3"
glob = "0.3.1"
itertools = "0.11.0"
path-absolutize = "3.1.1"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
walkdir = "2.4.0"
